syntax = 'proto3';

option java_package = 'acmcsus.debugjudge.proto';
option java_outer_classname = 'AutoJudge';

package acmcsus.debugjudge;

import "competition.proto";

// Messages that only ever come from autojudges.
message AJ2SMessage {
  oneof value {
    AutoJudgeResultMessage submissionJudgementMessage = 3;
  }
  // See also: J2SMessage.SubmissionResultMessage
  message AutoJudgeResultMessage {
    int32 team_id = 1;
    int32 problem_id = 2;
    int64 submission_id = 3;

    repeated AlgorithmicCaseResult execution_result = 4;

    SubmissionJudgement preliminary_judgement = 5;
    string preliminary_judgement_message = 6;
  }
}

// Messages that are specifically for autojudges.
message S2AJMessage {

  oneof value {
    ExecuteSubmissionMessage executeSubmission = 1;
  }

  message ExecuteSubmissionMessage {
    Submission submission = 1;
  }
}
